VPC/VPC-2AZ-Pub-Priv.yaml
Description: > 
              Template di preparazione network con 2 zone Pubbliche e 2 Private.
              Deploy di 2 NAT Gateway e creazione delle route table corrette
              ATTENZIONE VPC /21 e subnet a partire dalla 0 tutte /24


Parameters:
  EnvironmentTag:
    Description: Inserisci il prefisso della VPC
    Type: String
    
  CIDRPrefix:
    Description: 'Inserisci la classe B del prefisso  (e.g. 192.168, 10.1, 172.16)'
    Type: String

Resources:
# Creazione VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Fn::Join:
        - ''
        - - Ref: CIDRPrefix
          - ".0.0/21"
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: EnvironmentTag
            - "-vpc"

# Creazione Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: EnvironmentTag
            - "-igw"
  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  
# Creazione Subnet Pubbliche  
  PublicSubnet0:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs: ''
      CidrBlock:
        Fn::Join:
        - ''
        - - Ref: CIDRPrefix
          - ".0.0/24"
      MapPublicIpOnLaunch: true
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: EnvironmentTag
            - "-pub-0"
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs: ''
      CidrBlock:
        Fn::Join:
        - ''
        - - Ref: CIDRPrefix
          - ".1.0/24"
      MapPublicIpOnLaunch: true
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: EnvironmentTag
            - "-pub-1"
  
  # Creazione reti private
  PrivateSubnet0:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs: ''
      CidrBlock:
        Fn::Join:
        - ''
        - - Ref: CIDRPrefix
          - ".2.0/24"
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: EnvironmentTag
            - "-priv-0"
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs: ''
      CidrBlock:
        Fn::Join:
        - ''
        - - Ref: CIDRPrefix
          - ".3.0/24"
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: EnvironmentTag
            - "-priv-1"
  
  # Creazione routing table pubblica
  PublicRoutingTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: EnvironmentTag
            - "-route-pub"
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
      RouteTableId:
        Ref: PublicRoutingTable
  PublicRouteAssociation0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRoutingTable
      SubnetId:
        Ref: PublicSubnet0
  PublicRouteAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRoutingTable
      SubnetId:
        Ref: PublicSubnet1
  
  # Creazione routing table e NAT Gateway priv 0
  PrivateRoutingTable0:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: EnvironmentTag
            - "-route-priv-0"
  NATGatewayIPAddress0:
    Type: AWS::EC2::EIP
    DependsOn: AttachInternetGateway
    Properties:
      Domain: vpc
  NATGateway0:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - NATGatewayIPAddress0
        - AllocationId
      SubnetId:
        Ref: PublicSubnet0
  PrivateRoute0:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATGateway0
      RouteTableId:
        Ref: PrivateRoutingTable0
  PrivateRouteAssociation0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRoutingTable0
      SubnetId:
        Ref: PrivateSubnet0
  
  # Creazione routing table e NAT Gateway priv 1
  PrivateRoutingTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: EnvironmentTag
            - "-route-priv-1"
  NATGatewayIPAddress1:
    Type: AWS::EC2::EIP
    DependsOn: AttachInternetGateway
    Properties:
      Domain: vpc
  NATGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - NATGatewayIPAddress1
        - AllocationId
      SubnetId:
        Ref: PublicSubnet1
  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATGateway1
      RouteTableId:
        Ref: PrivateRoutingTable1
  PrivateRouteAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRoutingTable1
      SubnetId:
        Ref: PrivateSubnet1

# Security Group
  MGMSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName:
        Fn::Join:
        - ''
        - - Ref: EnvironmentTag
          - "-mgm-sg"
      GroupDescription: Regola per accesso ssh 
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
        Description: SSH from Any

      
# Outputs
Outputs:
  StackName:
    Description: This is the stack name.
    Value:
      Ref: AWS::StackName
  VPCCIDRBlock:
    Description: This is the VPC CIDR Block.
    Value:
      Fn::Join:
      - ''
      - - Ref: CIDRPrefix
        - ".0.0/21"
  VPCCIDRPrefix:
    Description: This is the VPC CIDR Prefix For Offsetting in your chained stacks.
    Value:
      Ref: CIDRPrefix
  EnvTag:
    Description: This is the environment tag to use for other stacks to inherit.
    Value:
      Ref: EnvironmentTag
  PublicSubnet0:
    Description: Public subnet 0 
    Value:
      Ref: PublicSubnet0
  PublicSubnet1:
    Description: Public subnet 1 
    Value:
      Ref: PublicSubnet1
  PrivateSubnet0:
    Description: Private subnet 0 
    Value:
      Ref: PrivateSubnet0
  PrivateSubnet1:
    Description: Private subnet 1 
    Value:
      Ref: PrivateSubnet1
  PrivateCIDRRange:
    Description: This is the Application CIDR Range.
    Value:
      Fn::Join:
      - ''
      - - Ref: CIDRPrefix
        - ".2.0/23"
  PublicCIDRRange:
    Description: This is the Application CIDR Range.
    Value:
      Fn::Join:
      - ''
      - - Ref: CIDRPrefix
        - ".0.0/23"
  NATPublicIP0:
    Description: This is the NAT Public IP address.
    Value:
      Ref: NATGatewayIPAddress0
  NATPublicIP1:
    Description: This is the NAT Public IP address.
    Value:
      Ref: NATGatewayIPAddress1
  VPCID:
    Description: This is the VPC you have created
    Value:
      Ref: VPC
  MGMSecurityGroup:
    Description: The security group for master and data nodes
    Value:
      Ref: MGMSecurityGroup
